# TAFLEX-PY

./: .gitignore  MIGRATION_EXECUTION_SUMMARY.md  MIGRATION_PLAN.md  README.md  allure.sh  conftest.py  pyproject.toml  requirements.txt  setup.sh  update_docs.py
.github/workflows/: ci.yml  docs.yml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: index.md
docs/docs/api/: core-interfaces.md
docs/docs/architecture/: execution-flow.md  overview.md
docs/docs/best-practices/: test-design.md
docs/docs/getting-started/: configuration.md  quickstart.md  scaffolding-wizard.md
docs/docs/guides/: bdd-testing.md  developers.md  locators.md  managers.md  mcp-integration.md  pact-testing.md  qa-engineers.md
docs/docs/tutorials/: api-tests.md  bdd-tests.md  contract-testing.md  mobile-tests.md  web-tests.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
src/config/: config_manager.py
src/core/contracts/: pact_manager.py
src/core/drivers/: api_client.py  automation_driver.py  driver_factory.py  ui_driver.py
src/core/elements/: mobile_element.py  playwright_element.py
src/core/locators/: locator_manager.py
src/mcp/: server.py
tests/api/: test_users.py
tests/api_ui/: test_hybrid.py
tests/bdd/: conftest.py  test_login_bdd.py
tests/mobile/: test_android_settings.py
tests/pages/: login_page.py
tests/unit/: test_appium_mobile_strategy.py  test_config_manager.py  test_database_manager.py  test_driver_factory.py  test_locator_manager.py  test_playwright_element.py
tests/web/: test_login.py
(+11 files in other folders)
